--- a/packages/assets/package.json
+++ b/packages/assets/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-native/assets-registry",
-  "version": "0.82.0-main",
+  "version": "0.82.0-20250808-1838",
   "description": "Asset support code for React Native.",
   "license": "MIT",
   "repository": {
