--- a/packages/polyfills/package.json
+++ b/packages/polyfills/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-native/js-polyfills",
-  "version": "0.82.0-main",
+  "version": "0.82.0-20250808-1838",
   "description": "Polyfills for React Native.",
   "license": "MIT",
   "repository": {
