--- a/packages/react-native-codegen/package.json
+++ b/packages/react-native-codegen/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-native/codegen",
-  "version": "0.82.0-main",
+  "version": "0.82.0-20250808-1838",
   "description": "Code generation tools for React Native",
   "license": "MIT",
   "repository": {
