--- a/packages/react-native/ReactAndroid/gradle.properties
+++ b/packages/react-native/ReactAndroid/gradle.properties
@@ -1,4 +1,4 @@
-VERSION_NAME=1000.0.0
+VERSION_NAME=0.82.0-20250808-1838
 react.internal.publishingGroup=com.facebook.react
 
 android.useAndroidX=true
