--- a/packages/typescript-config/package.json
+++ b/packages/typescript-config/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-native/typescript-config",
-  "version": "0.82.0-main",
+  "version": "0.82.0-20250808-1838",
   "description": "Default TypeScript configuration for React Native apps",
   "license": "MIT",
   "repository": {
