--- a/packages/virtualized-lists/package.json
+++ b/packages/virtualized-lists/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-native/virtualized-lists",
-  "version": "0.82.0-main",
+  "version": "0.82.0-20250808-1838",
   "description": "Virtualized lists for React Native.",
   "license": "MIT",
   "repository": {
